<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".LevelOneTestingActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorYellow"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingLeft="30dp"
        android:text="@string/test1colors"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/circle_level"
        app:layout_constraintStart_toStartOf="@+id/circle_level"
        app:layout_constraintTop_toTopOf="@+id/circle_level"
        tools:ignore="RtlSymmetry" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_level"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_back"
        android:src="@drawable/lvl2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/instructions"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circle_level" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/instructions"
        app:layout_constraintStart_toStartOf="@+id/instructions"
        app:layout_constraintTop_toBottomOf="@+id/instructions">

        <ImageView
            android:id="@+id/sound"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/card_description"
            android:src="@drawable/ic_volume_up_white_24" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/black"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/image_background"
                    android:src="@drawable/l2_black" />

                <ImageView
                    android:id="@+id/purple"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/image_background"
                    android:src="@drawable/l2_purple" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/green"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/image_background"
                    android:src="@drawable/l2_green" />

                <ImageView
                    android:id="@+id/red"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/image_background"
                    android:src="@drawable/l2_red" />

            </LinearLayout>

            <ImageView
                android:id="@+id/white"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/image_background"
                android:src="@drawable/l2_white" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>